--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,92 @@
-.App {
-  text-align: center;
+.configuracoes-container {
+    padding-left: 10%;
+    padding-top: 5%;
+    display: flex;
+    align-items: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.configuracoes-container form {
+    width: 100%;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.configuracoes-container form ul.configuracoes-maquina {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.configuracoes-container form ul li {
+    display: flex;
+    flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.configuracoes-container form label {
+    padding-top: 10px;
+    padding-left: 5px;
+    font-size: 26px;
+    font-weight: bold;
+    color: #666;
+}
+
+.configuracoes-container form input {
+    margin-top: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    height: 48px;
+    padding: 0 20px;
+    font-size: 16px;
+    color: #666;
+}
+
+.configuracoes-container form input::placeholder {
+    color: #999;
+}
+
+.configuracoes-container form button {
+    margin: 50px auto;
+    width: 500px;
+    margin-top: 10px;
+    border: 0;
+    border-radius: 4px;
+    height: 48px;
+    font-size: 16px;
+    background: #1678C2;
+    font-weight: bold;
+    color: #FFF;
+    cursor: pointer;
+}
+
+.two-containers {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+}
+
+.transicoes-container ul {
+    list-style: none;   
+}
+
+.transicoes-container ul li {
+    display: inline;
+    margin-left: 20px;
+}
+
+.transicoes-container ul li label {
+    font-size: 30px;
+    padding-left: 3px;
+}
+
+.transicoes-container ul li .dropdown {
+    max-width: 70px;
+    width: 100%;
+}
+
+.transicoes-container ul li .button {
+    margin-left: 10px;
 }
